# fast-draft

./: .gitignore  .gitmodules  CLAUDE.md  SGLANG_BUG1.md  STATUS.md  ablation_report.md  bench_tree_attn_hq32_hkv8.csv  bench_tree_attn_hq64_hkv8.csv  h100_kernel.tex  h100_kernel_hq32_hkv8.csv  h100_kernel_hq64_hkv8.csv  pyproject.toml  tree_categories_results.csv
docs/: cascade-vs-fasttree-analysis.md
results/: A6000Llama-3.1-8B_pg19.csv  A6000_Llama-3.1-8B_gov_report_temp0_bs1.csv  A6000_Llama-3.1-8B_pg19_temp0p2_bs1.csv  A6000_Qwen3-4B_gov_report_temp0_bs1.csv  A6000_Qwen3-4B_narrativeqa_temp0_bs1.csv  A6000_Qwen3-4B_pg19_temp0_bs1.csv  A6000_standalone_cascade_Llama-3.1-8B_Llama-3.2-1B_top10_7_gov_report_temp0_bs1.csv  A6000_standalone_cascade_Llama-3.1-8B_Llama-3.2-1B_top10_7_narrativeqa_temp0_bs1.csv  A6000_standalone_cascade_Llama-3.1-8B_Llama-3.2-1B_top10_7_pg19_temp0_bs1.csv  A6000_standalone_cascade_Llama-3.1-8B_Llama-3.2-1B_top10_7_pg19_temp0p2_bs1.csv  A6000_standalone_cascade_Qwen3-4B_Qwen3-4B_eagle3_top10_4_pg19_temp0_bs1.csv  A6000_standalone_cascade_Qwen3-4B_Qwen3-4B_eagle3_top10_5_gov_report_temp0_bs1.csv  A6000_standalone_cascade_Qwen3-4B_Qwen3-4B_eagle3_top10_5_narrativeqa_temp0_bs1.csv  A6000_standalone_cascade_Qwen3-4B_Qwen3-4B_eagle3_top10_5_pg19_temp0_bs1.csv  A6000_standalone_cascade_no_cg_Llama-3.1-8B_Llama-3.2-1B_top10_7_gov_report_temp0_bs1.csv  A6000_standalone_cascade_no_cg_Llama-3.1-8B_Llama-3.2-1B_top10_7_narrativeqa_temp0_bs1.csv  A6000_standalone_cascade_no_cg_Llama-3.1-8B_Llama-3.2-1B_top10_7_pg19_temp0_bs1.csv  (+112 more)
tests/: bench_dataset.py  (+18 more)
(+11 files in other folders)
